--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <div id="root">Not Rendered</div>
-
-
+    <!-- CDN links
             <script crossorigin 
             src="https://unpkg.com/react@18/umd/react.development.js">
 
@@ -17,9 +16,8 @@
             <script 
             crossorigin 
             src="https://unpkg.com/react-dom@18/umd/react-dom.development.js">
-
-            </script>
-            <script src="App.js"></script>
+    -->
+    <script type="module" src="App.js"></script>
 
 </body>
 </html>
